--- a/index.html
+++ b/index.html
@@ -4,17 +4,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="css/reset.css">
+
+    <script src="https://kit.fontawesome.com/7d5224a84d.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nerko+One&family=Roboto+Condensed:wght@300&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Document</title>
+    <link rel="shortcut icon" href="images/pumpkin.svg" type="image/x-icon">
+
+    <title>Home Page</title>
 </head>
 
 <body>
-    <div class="parent">
-        <div class="square">
+    <div class="main-div">
 
-        </div>
+        <!-- header -->
+
+        <header class="index-header">
+            <a href="index.html" class="site-logo-link">
+
+                <img src="images/pumpkin.svg" alt="pumpkin logo" class="site-logo">
+
+            </a>
+
+            <!-- nav -->
+
+            <nav class="navigator">
+                <ul>
+                    <li>
+
+                        <a href="index.html" class="header-list active">
+                            Home
+                        </a>
+
+                    </li>
+
+
+                    <li>
+                        <a href="" class="header-list inactive">
+                            Menu
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a href="" class="header-list inactive">
+                            Reservation
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="" class="header-list inactive">
+                            Contact
+                        </a>
+
+                    </li>
+
+                </ul>
+
+            </nav>
+
+            <i class="fa-solid fa-bag-shopping bag" style="color: #fcc21b;"></i>
+
+        </header>
+
+        <!-- section -->
+        <section class="section1">
+            <img src="images/cover.png" alt=" section cover" class="section-cover">
+            <article class="section1-article">
+                <h2 class="article-h2">Taste the world’s best dishes</h2>
+            </article>
+        </section>
     </div>
 
 </body>
