--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!-- nav -->
 
             <nav class="navigator">
-                <ul>
+                <ul class="header-ul">
                     <li>
 
                         <a href="index.html" class="header-list active">
@@ -75,13 +75,62 @@
 
         </header>
 
-        <!-- section -->
+        <!-- section1 -->
         <section class="section1">
             <img src="images/cover.png" alt=" section cover" class="section-cover">
+
             <article class="section1-article">
+
                 <h2 class="article-h2">Taste the world’s best dishes</h2>
+
             </article>
+
         </section>
+
+        <!-- section-2 -->
+        <section class="section2">
+
+            <article class="section2-article">
+                <img src="images/section-image1.png" alt="section2 image" class="section2-image">
+                <h2 class="section2-text">Taste it</h2>
+
+            </article>
+
+            <article class="section2-article">
+                <img src="images/section2-image.png" alt="section image 2" class="section2-image">
+                <h3 class="section2-text">
+                    Taste it
+                </h3>
+            </article>
+
+        </section>
+        <footer class="index-footer">
+            <nav>
+                <ul class="footer-ul">
+                    <li>
+                        <a href="" class="footer-links">
+                            Food
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="footer-links">
+                            Menu
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="footer-links">
+                            Catering Nutritionals and Allergens
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="footer-links">
+                            Good Slice Pizza
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </footer>
+
     </div>
 
 </body>
