--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <nav class="navigator">
                 <ul class="header-ul">
-                    <li>
+                    <li class="page-lists">
 
                         <a href="index.html" class="header-list active">
                             Home
@@ -47,20 +47,20 @@
                     </li>
 
 
-                    <li>
+                    <li class="page-lists">
                         <a href="" class="header-list inactive">
                             Menu
                         </a>
 
                     </li>
 
-                    <li>
+                    <li class="page-lists">
                         <a href="" class="header-list inactive">
                             Reservation
                         </a>
                     </li>
 
-                    <li>
+                    <li class="page-lists">
                         <a href="" class="header-list inactive">
                             Contact
                         </a>
@@ -70,8 +70,12 @@
                 </ul>
 
             </nav>
+            <a href="">
+                <i class="fa-solid fa-bag-shopping bag" style="color: #fcc21b;">
 
-            <i class="fa-solid fa-bag-shopping bag" style="color: #fcc21b;"></i>
+                </i>
+            </a>
+
 
         </header>
 
@@ -105,30 +109,75 @@
 
         </section>
         <footer class="index-footer">
-            <nav>
+
+            <nav class="footer-nav">
+
                 <ul class="footer-ul">
-                    <li>
+
+                    <li class="footer-page-links">
                         <a href="" class="footer-links">
                             Food
                         </a>
                     </li>
-                    <li>
+
+                    <li class="footer-page-links">
                         <a href="" class="footer-links">
                             Menu
                         </a>
                     </li>
-                    <li>
+
+                    <li class="footer-page-links">
                         <a href="" class="footer-links">
+
                             Catering Nutritionals and Allergens
                         </a>
                     </li>
-                    <li>
+
+                    <li class="footer-page-links">
                         <a href="" class="footer-links">
                             Good Slice Pizza
                         </a>
+
                     </li>
+
                 </ul>
+
             </nav>
+
+            <nav class="social-links">
+
+                <ul class="social-links-ul">
+                    <li class="social-links-li">
+                        <a href="https://www.instagram.com/" target="_blank">
+                            <i class="fa-brands fa-instagram icon" style="color: #fcc21b;">
+                            </i>
+                        </a>
+                    </li>
+
+                    <li class="social-links-li">
+                        <a href="https://ge.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin icon"
+                                style="color: #fcc21d;"></i>
+                        </a>
+                    </li>
+
+                    <li class="social-links-li">
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f icon"
+                                style="color: #fcc21d;"></i></a>
+
+                    </li>
+
+                    <li class="social-links-li">
+                        <a href="https://www.tiktok.com/explore?kuid=3130dfce-c086-437f-9ab0-df56eaf7fd8b&kref=vGWRdzLJnjYfx"
+                            target="_blank"><i class="fa-brands fa-tiktok icon" style="color: #fcc21d;"></i>
+                        </a>
+
+                    </li>
+
+                </ul>
+
+            </nav>
+
+
         </footer>
 
     </div>
