--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/7d5224a84d.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link
@@ -97,7 +97,9 @@
         <section class="section2">
 
             <article class="section2-article">
+
                 <img src="images/section-image1.png" alt="section2 image" class="section2-image">
+
                 <h2 class="section2-text">Taste it</h2>
 
             </article>
@@ -146,14 +148,19 @@
 
             </nav>
 
-            <nav class="social-links">
+            <nav class="social-links-nav">
 
                 <ul class="social-links-ul">
+
                     <li class="social-links-li">
+
                         <a href="https://www.instagram.com/" target="_blank">
+
                             <i class="fa-brands fa-instagram icon" style="color: #fcc21b;">
                             </i>
+
                         </a>
+                        
                     </li>
 
                     <li class="social-links-li">
